@@ -1,6 +1,7 @@
 v1.6.3
    - #465: Translation for Spanish Uruguay by @mlopezcoria
    - #468: Remove PHP 7.3 warnings
+   - #38: required_field doesn't work for relation_n_n fields
 v 1.6.2
     - #442: Searching in grid with value 0 is not working
     - #458: Updated Lithuanian language by @dgvirtual
